--- a/test.html
+++ b/test.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <title>JS快速開始</title>
 </head>
+
 <body>
-    <h1>胖胖ver2</h1>
+    <script>
+
+
+    </script>
+
 </body>
+
 </html>
